--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2"
